0.4.0-next:
 * show more information in the initial window
 * allow loading more than one disk at once
 * if an operation can't be cancelled, offer a Force Cancel button
 * show game name in window title
 * remember browse path for disk images
 * bug: sometimes trying to cancel an operation causes random errors
 * bug: overwriting a directory with itself makes bad things happen
 * bug: cancelling a directory import because of an invalid name doesn't work
 * bug: on import, a file can overwrite another without a warning if renamed
        through the dialogue for invalid names

0.4.0:
 * menus; this means:
    * disk compression feature is exposed in the GUI
    * search is now properly exposed
    * more keyboard shortcuts
    * old keyboard shortcuts are discoverable
    * keyboard shortcuts are remappable
 * bug: pausing sometimes causes a crash

0.3.0:
 * start with a list of previously opened disk images
 * some search options
 * search history, and a setting to limit number of saved searches
 * perform a number of validity checks on an opened disk image
 * (slightly) better error messages on extract
 * bug: tooltips don't show up for files with certain characters

0.2.0:
 * search function (ctrl + f)
 * larger default text area height for tracebacks in error messages
 * bug: copying a directory means any modifications affect both, and writing
   only leaves the files in either the source or the copy, but removes them
   from the other

0.1.3:
 * allow writing to be cancelled (much) more often
 * display filesizes
 * significant write performance improvements for (very) large numbers of files
 * icon
 * desktop entry
 * preferences window closes on escape key
 * bug: settings don't get saved until the preferences window is closed
 * bug: when creating a new directory, it seems like the first file is being
   renamed instead of the new directory

0.1.2:
 * pause button when writing/extracting
 * internationalisation
 * Portuguese translation