@@ -2,6 +2,7 @@
  * show more information in the initial window
  * allow loading more than one disk at once
  * if an operation can't be cancelled, offer a Force Cancel button
+ * copy speed/remaining time estimation in progress windows
  * show game name in window title
  * remember browse path for disk images
  * bug: sometimes trying to cancel an operation causes random errors
